Mr Hyde was here …

--- a/_posts/2016-10-11-Tester2.md
+++ b/_posts/2016-10-11-Tester2.md
@@ -9,3 +9,5 @@ tags: [nature, waterfall, hike, prague, yearinabackpack]
 Just testing behaviour for this post to see how would 3 posts look like on the site.
 
 Check how links, images etc. look together.
+
+Adding new stuff to this journal
