Mr Hyde was here …

--- a/_posts/2016-12-15-uruguay.md
+++ b/_posts/2016-12-15-uruguay.md
@@ -2,7 +2,7 @@
 layout: post
 img: 'img/2016-12-15'
 title: "Uruguay"
-author: [simon]
+author: simon
 landmark: [Montevideo]
 categories: [Uruguay]
 tags: [ferry, city, hitchhiking, earthship, beach]
