Mr Hyde was here …

--- a/_posts/2016-12-29-ruta-40.md
+++ b/_posts/2016-12-29-ruta-40.md
@@ -2,7 +2,7 @@
 layout: post
 img: 'img/2016-12-29'
 title: "Ruta 40"
-author: [kuba]
+author: kuba
 landmark: [Chos Malal]
 categories: [Argentina]
 tags: [hitchhiking, road, volcano, river, mountains, nature]
