Mr Hyde was here …

--- a/_posts/2017-03-04-el-choro.md
+++ b/_posts/2017-03-04-el-choro.md
@@ -13,7 +13,7 @@ The Incas built a system of infrastructure that allowed them to **connect to dee
 
 {% include image.html image-name="DSC01878.jpg" %}
 
-**There are hundreds of kilometers of these Andean paths**. Today, the trails are still maintained by the local communities (some of them indigenous), who live there, grow their own food and have cattle. Thanks to tourists, they are able to make some money for themselves as well by selling some food or offering camping, but otherwise, they live well isolated.
+**There are thousands of kilometers of these Andean paths**. Today, the trails are still maintained by the local communities (some of them indigenous), who live there, grow their own food and have cattle. Thanks to tourists, they are able to make some money for themselves as well by selling some food or offering camping, but otherwise, they live well isolated.
 
 {% include map.html %}
 
