Mr Hyde was here …

--- a/_posts/2017-03-04-el-choro.md
+++ b/_posts/2017-03-04-el-choro.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 img: 'img/2017-03-04'
-title: "El Choro, camino del Inca
+title: "El Choro, camino del Inca"
 author: kuba
 landmark: [La Cumbre]
 categories: [Bolivia]
