--- a/_posts/2017-04-13-ica.md
+++ b/_posts/2017-04-13-ica.md
@@ -4,7 +4,7 @@ img: 'img/2017-04-13'
 landmark: [Ica]
 categories: [Peru]
 tags: [city, culture]
-title: "{{ page.landmark }}"
+title: "{page.landmark}"
 author: kuba
-description: "Photos from {{ page.landmark }}"
+description: "Photos from {page.landmark}"
 ---
