Mr Hyde was here …

--- a/_posts/2017-04-14-lima.md
+++ b/_posts/2017-04-14-lima.md
@@ -4,7 +4,7 @@ img: 'img/2017-04-14'
 landmark: [Lima]
 categories: [Peru]
 tags: [city, culture]
-title: "{{ page.landmark }}"
+title: {{ page.landmark }}
 author: kuba
 description: "Photos from {{ page.landmark }}"
 ---
