Mr Hyde was here …

--- a/_posts/2017-04-17-medellin.md
+++ b/_posts/2017-04-17-medellin.md
@@ -1,10 +1,10 @@
 ---
 layout: photo
 img: 'img/2017-04-17'
-landmark: [Medellín]
+landmark: &landmark [Medellín]
 categories: [Colombia]
 tags: [photos, city, culture]
-title: Medellín
+title: *landmark
 author: kuba
-description: "Photos from {page.landmark}"
+description: "Photos from *landmark"
 ---
