--- a/_posts/2017-04-17-medellin.md
+++ b/_posts/2017-04-17-medellin.md
@@ -6,5 +6,5 @@ categories: [Colombia]
 tags: [photos, city, culture]
 title: *landmark
 author: kuba
-description: Photos from %{landmark}
+description: Photos from <<: *landmark
 ---
