Mr Hyde was here …

--- a/_posts/2016-12-15-uruguay.md
+++ b/_posts/2016-12-15-uruguay.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 img: 'img/2016-12-15'
-title: "Uruguay"
+title: "One week in Uruguay"
 author: simon
 landmark: [Montevideo]
 categories: [Uruguay]
