--- a/_posts/2016-12-29-ruta-40.md
+++ b/_posts/2016-12-29-ruta-40.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 img: 'img/2016-12-29'
-title: "Ruta 40"
+title: "The Argentinian dream: Ruta 40"
 author: kuba
 landmark: [Chos Malal]
 categories: [Argentina]
