Mr Hyde was here …

--- a/_posts/2017-10-21-no-stamp.md
+++ b/_posts/2017-10-21-no-stamp.md
@@ -21,7 +21,7 @@ We decided to go to Sapa, which promised slightly better weather forecast and no
 
 {% include image.html image-name="20171016171911_IMG_1069.jpg" %}
 
-We decided to move onto Laos, where Norwegian meteorologists promised us sunshine. Being 150km away from the Lao border and we decided to go by bus to experience the remote mountaineous landscapes northeast of Luang Prabang. 
+Laos was our next destination since Norwegian meteorologists promised us sunshine. Being 150km away from the Lao border and we decided to go by bus to experience the remote mountaineous landscapes northeast of Luang Prabang. 
 
 {% include image.html image-name="20171017224633_IMG_1107.jpg" %}
 
