Mr Hyde was here …

--- a/_posts/2017-10-21-no-stamp.md
+++ b/_posts/2017-10-21-no-stamp.md
@@ -47,7 +47,7 @@ The road we followed was increasingly worsening from semi-pavement to dirt -  ab
 
 Now, lets get to the point of this story. We traveled for over 13hrs from Sapa (or 23hrs from Hanoi) to learn that they won't give us the exit stamp required to leave Vietnam. As we applied for e-visa, we could only enter/exit Vietnam through one of 28 border posts - Tay Trang isn't one of them. You can only leave through here if your visa is just about to expire. So now, we were stuck. We simply couldn't believe an exit stamp would be such a problem. 
 
-The communist official told us "no, we're very sorry, you have to go to Nam Can border". We made multiple attempts at negotiating with him, but he firmly followed the rules. Quite interestingly, he wasn't willing to stamp even for a bribe (first uncorrupt communist?!) and said so would kill his career. The solution he gave us meant bussing around the country for 2 more days to get to the correct border, what the fuck? The point being the getting of a stamp! We were trapped in bureaucratic nonsense. 
+The communist official told us "no, we're very sorry, you have to go to Nam Can border". We made multiple attempts at negotiating with him, but he firmly followed the rules. Quite interestingly, he wasn't willing to stamp even for a bribe (first uncorrupt communist?!) and told us that doing so would kill his career. The solution he gave us meant bussing around the country for 2 more days to get to the correct border, what the fuck? The point being the getting of a stamp! We were trapped in bureaucratic nonsense. 
 
 Luckily for us, there was an old lady running a coffee shop. We sat down and searched the internet for a better option than 2 day buses. Coffee made us find a guy who'd take us back to Dien Bien for 100k dong each, from where we could fly out. 
 
